[tool.poetry]
name = "borgctl"
version = "0.4.7"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruamel-yaml = "^0.18.5"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
mypy = "^1.7.1"
stdeb = "^0.10.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
borgctl = "borgctl.__init__:main"

[tool.setuptools.package-data]
borgctl = ["default.yml.template"]

[tool.mypy]
files = "borgctl/*.py"
strict_optional = false
local_partial_types = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "borgctl.*",
    "ruamel.yaml.*"
]
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
no_implicit_reexport = true
strict_equality = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
